Add more stuff in basecamp page

--- a/basecamp.html
+++ b/basecamp.html
@@ -1,12 +1,20 @@
 ---
 layout: default
-title: Ali Servet Donmez
+title: Hello, Basecamp! This is Ali.
 permalink: /basecamp/
 header: false
 ---
 
 {% include basecamp/header.html %}
+
 {% include basecamp/intro-section.html %}
+
+<hr>
+
+{% include basecamp/ttmc-section.html %}
+
 <div class="background-wrapper">
   {% include basecamp/basecamp-and-me-section.html %}
 </div>
+
+{% include basecamp/testimonials.html %}
