--- a/cypress_bug.html
+++ b/cypress_bug.html
@@ -10,7 +10,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       setTimeout(() => {
-        fetch("http://example.com/", {
+        fetch("https://example.com/", {
           "method": "POST",
           "headers": {
             "Content-Type": "application/json"
