--- a/cypress_bug.html
+++ b/cypress_bug.html
@@ -12,6 +12,7 @@
       setTimeout(() => {
         fetch("https://example.com/", {
           "method": "POST",
+          "mode: "no-cors",
           "headers": {
             "Content-Type": "application/json"
           },
