--- a/cypress_bug.html
+++ b/cypress_bug.html
@@ -16,7 +16,7 @@
           "headers": {
             "Content-Type": "application/json"
           },
-          "body": "{\"message\":\"hello world\"}"
+          "body": { message: 'hello world' }
         })
         .then(response => {
           console.log(response);
