--- a/cypress_bug.html
+++ b/cypress_bug.html
@@ -31,6 +31,7 @@
           data: JSON.stringify({ message: 'hello world' }),
           contentType: 'application/json; charset=utf-8',
           dataType: 'json',
+          crossDomain: true,
         });
       }, 100);
     });
