--- a/cypress_bug.html
+++ b/cypress_bug.html
@@ -30,8 +30,7 @@
           url: 'https://example.com/',
           data: JSON.stringify({ message: 'hello world' }),
           contentType: 'application/json; charset=utf-8',
-          dataType: 'json',
-          crossDomain: true,
+          dataType: 'jsonp',
         });
       }, 100);
     });
